      selecting an app directly from in the Featured or What's
      New panels (LP: #624732) 
  * softwarecenter/backend/channel.py:
    - wire in icons for For Purchase, Independent and Other
      nodes in the left navigation pane (LP: #614213, LP: #614214,
      LP: #614215), many thanks to vish for pointers to suitable
      icons in the theme! 
  
  [ Mohamed Amine IL Idrissi ]
  * Do not include download size of installed app.
  
 -- Gary Lasker <gary.lasker@canonical.com>  Thu, 26 Aug 2010 12:48:03 -0400

software-center (2.1.13) maverick; urgency=low

  [ Kiwinote ]
  * refactor addons code
  * allow ourselves to install/remove via menu/list_view (LP: #624406)
  * hide action_bar in featured pane

  [ Mohamed Amine IL Idrissi ]
  * softwarecenter/view/appdetailsview_gtk.py:
    - minor ui changes to the addons view

  [ Michael Vogt ]
  * merged  lp:~mmcg069/software-center/whereitsit-tweaks to fix
    icon size in "where-is-it" code (many thanks)
  * merged  lp:~mpt/software-center/fit-and-finish-2, fixes not
    precise string and remove the yellow color from the search
    widget (many thanks)
  * merged  lp:~mmcg069/software-center/fit-and-finish-22, 
    many thanks
  * software-center:
    - make --enable-buy the default

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 26 Aug 2010 15:58:05 +0200

software-center (2.1.12.1) maverick; urgency=low

  * fix plugin loading

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 25 Aug 2010 23:31:08 +0200

software-center (2.1.12) maverick; urgency=low

  [ Kiwinote ]
  * softwarecenter/app.py:
    - pass required argument to fix crash (LP: #618212)
    - fix crash in setting supported filter (LP: #618243)
  * softwarecenter/db/application.py:
    - fail nicely on not available for architecture (mit-scheme)
  * softwarecenter/view/appdetailsview_gtk.py:
    - use package info lines rather than package info tables
      (for devildante to use in the addons branch)